# NovaProxy-Manager

./: .gitignore  ENGLISH.md  Makefile  README.md  RELEASE_UP.md  REVERT_SYSTEM.md  install.sh  pyproject.toml
.github/workflows/: release.yml
data/: novapm.gpg
debian/: changelog  control  debhelper-build-stamp  files  novapm.postinst  novapm.postinst.debhelper  novapm.prerm.debhelper  rules
debian/novapm/DEBIAN/: control  md5sums  postinst  prerm
debian/novapm/usr/lib/python3/dist-packages/proxy_gui/: __main__.py  main_window.py  profiles.py  profiles_window.py  proxy_cli.py  tray.py
debian/novapm/usr/lib/python3/dist-packages/proxy_gui/data/: askpass.py  novapm-bash  novapm-local.py  novapm-local.service
debian/novapm/usr/share/applications/: novapm.desktop
src/proxy_gui/: about.py  manual.py  notifier.py  proxy_cli.py  proxyctl.py  uninstall.py  update.py  window.py
src/proxy_gui/data/: novapm-bash  novapm-local.py
